--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.2.0",
+    "chart.js": "^4.1.1",
     "element-plus": "^2.2.25",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
