--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,19 +21,16 @@ jobs:
         with:
           node-version: 16
           cache: npm
+      - name: Create env file
+        run: |
+          touch .env
+          echo VITE_API_KEY=${{secrets.VITE_API_KEY}} >> .env
+          echo VITE_API_HOST=${{secrets.VITE_API_HOST}} >> .env
+          cat .env
       - name: Build app
         run: |
           npm install
           npm run-script build
-        env:
-          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
-          VITE_API_HOST: ${{ secrets.VITE_API_HOST }}
-      - name: Create env file
-        run: |
-          touch .env
-          echo VITE_API_KEY=${VITE_API_KEY} >> .env
-          echo VITE_API_HOST=${VITE_API_HOST} >> .env
-          cat .env
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
