--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo VITE_API_KEY=${{secrets.VITE_API_KEY}} >> .env
-          echo VITE_API_HOST=${{secrets.VITE_API_HOST}} >> .env
+          echo VITE_API_KEY=$VITE_API_KEY >> .env
+          echo VITE_API_HOST=$VITE_API_HOST >> .env
           cat .env
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+          VITE_API_HOST: ${{ secrets.VITE_API_HOST }}
       - name: Build app
         run: |
           npm install
