--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,9 @@ jobs:
         run: |
           npm install
           npm run-script build
-        env:
-          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
-          VITE_API_HOST: ${{ secrets.VITE_API_HOST }}
+        # env:
+        #   VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+        #   VITE_API_HOST: ${{ secrets.VITE_API_HOST }}
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
@@ -35,3 +35,4 @@ jobs:
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
+
